# stargayzine

./: .pre-commit-config.yaml  .pylintrc  README.md  constellations.csv  pyproject.toml  requirements.txt  try.py  zine.py
.circleci/: config.yml  scripts.yml  src.yml
.github/: settings.yml
src/: convert.py
src/stargayzine/: cli.py  convert.py
src/stargayzine/lib/: paging.py
