[tool.poetry]
name = "stargayzine"
version = "0.0.1"
description = "Stargayzing zines!"
authors = [
    "Emma Doyle",
    "Willow Ahrens"
]
maintainers = ["Emma Doyle", "Willow Ahrens"]
license = "GPLv3"
readme = "README.md"
packages = [
  { include = "src" }
]
include = [
  "LICENSE"
]
keywords = [
    "stargayzing",
    "zines"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
yamale = "^4.0.4"
shapely = "^2.0.1"
elkplot = {git = "https://github.com/ejkaplan/elkplot.git"}

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
pylint = "^2.15.10"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# premiscale = "premiscale.agent.cli:main"
